--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
     	<meta charset="utf-8" />
-	    <title><!-- TODO --></title>
+	    <title>TicTacToe</title>
 	    <link rel="stylesheet" type="text/css" href="css/main.css" />
 	</head>
 	<body>
