--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,12 @@
 	    <link rel="stylesheet" type="text/css" href="css/main.css" />
 	</head>
 	<body>
-		<div id="page"></div>
+		<div id="page">
+			<div id="main"></div>
+			<div id="login"></div>
+			<div id="scoreboard"></div>
+			<div id="game"></div>
+		</div>		
 		<script data-main="js/main" src="js/lib/require.js"></script>
 	</body>
 </html>
