--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,8 @@
 			<div id="login"></div>
 			<div id="scoreboard"></div>
 			<div id="game"></div>
-		</div>		
+			<div id="registration"></div>
+		</div>
 		<script data-main="js/main" src="js/lib/require.js"></script>
 	</body>
 </html>
