--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,8 @@
 		</div>
 		<script data-main="js/main" src="js/lib/require.js"></script>
 		<script data-main="js/main" src="js/lib/jquery.js"></script>
-	</body>
+        <script src="//127.0.0.1:35729/livereload.js"></script>
+    </body>
 </html>
 
     <script type="text/javascript">
