--- a/static/index.html
+++ b/static/index.html
@@ -6,13 +6,9 @@
 	    <link rel="stylesheet" type="text/css" href="css/main.css" />
 	</head>
 	<body>
-		<div id="page">
-			<div id="main"></div>
-			<div id="login"></div>
-			<div id="scoreboard"></div>
-			<div id="game"></div>
-			<div id="registration"></div>
-		</div>
+        <div id="page-top"></div>
+		<div id="page-main"></div>
+
 		<script data-main="js/main" src="js/lib/require.js"></script>
 		<script data-main="js/main" src="js/lib/jquery.js"></script>
         <script src="//127.0.0.1:35729/livereload.js"></script>
