--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
         <div id="page-top"></div>
-		<div id="page-main"></div>
+		<div id="page-body"></div>
 
 		<script data-main="js/main" src="js/lib/require.js"></script>
 		<script data-main="js/main" src="js/lib/jquery.js"></script>
