Адаптивная верстка (все, кроме игрового поля).

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,10 @@
         <div id="page-top"></div>
 		<div id="page-body"></div>
 
+		<script type="text/javascript">
+			$("body").css("overflow", "hidden");
+		</script>
+
 		<script data-main="js/main" src="js/lib/require.js"></script>
 		<script data-main="js/main" src="js/lib/jquery.js"></script>
         <script src="//127.0.0.1:35729/livereload.js"></script>
